# Sirius

./: CMakeLists.txt  LICENSE  README.md  example_main.c  main.c
Example_modules/: README.md  helloworld_examp.c
Example_modules/drivers/i2c/: i2c-1.c
Example_project/: CMakeLists.txt  partitions （16MBDelete）.csv  partitions （4MBDelete）.csv  partitions （8MBDelete） .csv  partitions.csv  sdkconfig  sdkconfig.old
Example_project/main/: CMakeLists.txt  README.md  custom.ld  hello.c  helloworld_examp.c  main.c  test.c
Example_project/main/config/: kernelconfig
Example_project/main/files/: README.md  esp32c3.dts
Example_project/main/kernel/: README.md
Example_project/main/kernel/arch/: README.md
Example_project/main/kernel/arch/Xtensa/mm/: mmp.c
Example_project/main/kernel/config/: kernelconfig  partition_config
Example_project/main/kernel/drivers/gpio/: gpio_driver.c  gpio_sys.c
Example_project/main/kernel/drivers/include/: console_cop.h
Example_project/main/kernel/drivers/log/: log.c
Example_project/main/kernel/drivers/tty/console/: console.c  esp_console.c  esp_console.c.txt
Example_project/main/kernel/drivers/video/include/: Windows.h  display_farmerwork.h  display_private_def.h
Example_project/main/kernel/drivers/video/src/: colour_process.c  display_buffer_manager.c  display_draw.c  display_list_manager.c  window.c
Example_project/main/kernel/fs/: vfs.c
Example_project/main/kernel/fs/vfs/: vfs.c  vfs_registry.c
Example_project/main/kernel/include/: app_install.h
Example_project/main/kernel/include/X11/: Xlib.h
Example_project/main/kernel/include/linux/: errno.h  fs.h  gpio.h  kernel.h  module.h  printk.h  seq_file.h  slab.h  spidev.h
Example_project/main/kernel/include/raid/: xor.h
Example_project/main/kernel/include/sirapi/video/: sirgui.h
Example_project/main/kernel/include/uapi/linux/: wireless.h
Example_project/main/kernel/include/video/: display.h
Example_project/main/kernel/init/: boot.c  init.h  kinit.h
Example_project/main/kernel/mm/: mm.c
Example_project/main/kernel/system/: syscalls.c
Example_project/main/kernel/system/posix/: custom_system.c  custom_system.ld  syscall.c  syscall.ld  syscalls.c
Example_project/main/kernel/tools/arch/espidf/: log.c
Example_project/main/kernel/tools/arch/espidf/driver/gpio/: gpio_set.c
Example_project/main/kernel/tools/arch/espidf/include/esp_console/: console.h
Example_project/main/kernel/tools/include/: shell.h
Example_project/main/kernel/tools/include/registry/: path_process.h
Example_project/main/kernel/tools/registry/src/: registry.c
Example_project/main/kernel/tools/shell/src/history/: history.c
Example_project/main/kernel/tools/shell/src/jobs/: jobs.c
Example_project/main/kernel/tools/shell/src/kilo/: kilo.c
Example_project/main/kernel/tools/shell/src/ls/: my_ls.c
Example_project/main/kernel/tools/shell/src/other/: cp.c  date.c  dmesg.c  env.c  head.c  mv.c  printf.c  run_script.c  sleep.c  tail.c  uptime.c  whoami.c
Example_project/main/kernel/tools/shell/src/rm/: rm.c
Example_project/main/kernel/tools/shell/src/star/: star.c
Example_project/main/kernel/tools/shell/src/touch/: touch.c
Example_project/main/kernel/toos/arch/espidf/: mount_esp_partition.c
Example_project/main/kernel/toos/arch/espidf/esp_spi_littlefs/: littlefs.c
Example_project/main/kernel/toos/arch/espidf/esp_spi_spiffs/: esp_spi_spiffs.c
Example_project/main/kernel/toos/arch/espidf/include/esp_fs/: espfs.h
Example_project/main/kernel/toos/data_scripts/: storage.c
Example_project/main/kernel/toos/dev_reset/: reset_dev.c
Example_project/main/kernel/toos/dts/: dts.c
Example_project/main/kernel/toos/include/: item_script.h  shell.h
Example_project/main/kernel/toos/shell/src/cat/: cat.c
Example_project/main/kernel/toos/shell/src/free/: free.c
Example_project/main/kernel/toos/shell/src/ls/: my_ls.c
Example_project/main/kernel/toos/shell/src/uname/: uname.c
Example_project/main/libs/: README.md
Example_project/main/libs/lvgl/: lv_conf.h
Example_project/main/libs/lvgl/lvgl_driver/: lv_port_disp.c  lv_port_indev_template.c
Example_project/main/libs/lvgl/src/core/: lv_obj.c
Example_project/main/modules/devices/stop_watch_dog/: stop_watch_dog.c
Example_project/main/modules/drivers/button/: button.c
Example_project/main/modules/drivers/i2c/: config  i2c-1.c  i2c_2.c
Example_project/main/modules/drivers/spi/: conf  spi.c
Example_project/main/modules/drivers/st7789/: ST7789.c  ST7789.dts  ST7789_getconfig.c  ST7789_io.c
Example_project/main/modules/drivers/tty/: tty1.c
Example_project/main/modules/tools/i2c_tools/: cmd_i2ctools.c
Example_project/main/modules/tools/lvgl/: LV_GUI_APP.c
Example_project/main/modules/tools/pikapython/: pikapython_main.c
Example_project/main/modules/tools/pikapython/pikascript-core/: pika_config_valid.h
Example_project/main/user/: clock_test.c
Kernel/: README.md
Kernel/arch/: README.md
Kernel/fs/vfs/: vfs_registry_init.c
Kernel/include/linux/: bits.h  fb.h  i2c.h  module.h
Kernel/init/: boot.c
Kernel/toos/include/: registry.h
example_app/: TEST_LED.c  loop_test.c
example_modules/driver/i2c/: node
example_modules/drivers/button/: button.c
example_modules/drivers/spi/: config
example_modules/toos/pikapython/: pikapython_main.c
example_project/Sirius_os_0.07_esp32c3/: CMakeLists.txt
example_project/Sirius_os_0.07_esp32c3/main/: main.c
example_project/project_1/: main.c  sdkconfig.old
example_project/project_1/files/: esp32S3.dts  profile
example_project/project_1/kernel/: README.md
example_project/project_1/main/: README.md  idf_component.yml  main.c
example_project/project_1/user/: TEST_LED.c  clock_test.c
example_project/project_esp32c3/main/: CMakeLists.txt  README.md
files/: esp32S3.dts  esp32c3.dts  esp_console.c
kernel/: README.md
kernel/drivers/i2c/: i2c_sys.c
kernel/include/linux/: bitops.h  list.h  sockios.h
kernel/include/uapi/: drm.h
kernel/toos/env/: env_magr.c
kernel/toos/include/: env.h  shell.h
modules/driver/button/: node.dts
(+116 files in other folders)
